--- a/v1/oauth/index.html
+++ b/v1/oauth/index.html
@@ -265,7 +265,7 @@ errors you might see:</p>
 <h3 id="application-suspended">Application Suspended</h3>
 
 <p>If the OAuth application you set up has been suspended (due to reported abuse,
-spam, or a mis-use of the API), Dribbble will redirect to the registered
+spam, or a misuse of the API), Dribbble will redirect to the registered
 callback URL with the following parameters summarizing the error:</p>
 
 <pre><code>http://your-application.com/callback?error=application_suspended
