--- a/v1/shots/rebounds/index.html
+++ b/v1/shots/rebounds/index.html
@@ -77,6 +77,7 @@ X-RateLimit-Remaining: 59</code></pre>
     <span class="s2">"attachments_url"</span> <span class="o">:</span> <span class="s2">"https://api.dribbble.com/v1/shots/472178/attachments"</span><span class="p">,</span>
     <span class="s2">"comments_url"</span> <span class="o">:</span> <span class="s2">"https://api.dribbble.com/v1/shots/472178/comments"</span><span class="p">,</span>
     <span class="s2">"likes_url"</span> <span class="o">:</span> <span class="s2">"https://api.dribbble.com/v1/shots/472178/likes"</span><span class="p">,</span>
+    <span class="s2">"projects_url"</span> <span class="o">:</span> <span class="s2">"https://api.dribbble.com/v1/shots/472178/projects"</span><span class="p">,</span>
     <span class="s2">"rebounds_url"</span> <span class="o">:</span> <span class="s2">"https://api.dribbble.com/v1/shots/472178/rebounds"</span><span class="p">,</span>
     <span class="s2">"rebound_source_url"</span> <span class="o">:</span> <span class="s2">"https://api.dribbble.com/v1/shots/471756"</span><span class="p">,</span>
     <span class="s2">"tags"</span> <span class="o">:</span> <span class="p">[</span>
