Correct links in follow and like payload change entry.

--- a/changes/index.html
+++ b/changes/index.html
@@ -75,13 +75,11 @@ shot</a> or <a href="/v1/users/buckets/">for a user</a>.</p>
 <p>The followers and following endpoints no longer simply return a user. It now
 returns <code>id</code> and <code>created_at</code> attributes with the user nested in it. Depending
 on the endpoint the user will be under the <code>followee</code> or <code>follower</code> attribute.
-See the <a href="http://localhost:5000/v1/users/followers/">followers documentation</a> for
-updated examples.</p>
+See the <a href="/v1/users/followers/">followers documentation</a> for updated examples.</p>
 
 <p>The like endpoints were also previously changed to include <code>id</code> and <code>created_at</code>
-attributes, with the <a href="http://localhost:5000/v1/shots/likes/#list-the-likes-for-a-shot">liking
-user</a> or <a href="http://localhost:5000/v1/users/likes/#list-shot-likes-for-a-user">liked
-shot</a> nested.</p>
+attributes, with the <a href="/v1/shots/likes/#list-the-likes-for-a-shot">liking user</a>
+or <a href="/v1/users/likes/#list-shot-likes-for-a-user">liked shot</a> nested.</p>
 
   </div>
 
