--- a/changes/2014-06-19-comment-mentions/index.html
+++ b/changes/2014-06-19-comment-mentions/index.html
@@ -66,6 +66,11 @@ the username is valid of course.</p>
         <ol>
           
             <li>
+              <a href="/changes/2014-09-26-attachment-content-type/">Attachment Content Type</a>
+              <span class="date">September 26, 2014</span>
+            </li>
+          
+            <li>
               <a href="/changes/2014-08-21-buckets/">Bucket Endpoints</a>
               <span class="date">August 21, 2014</span>
             </li>
